# pilgrimage

./: .gitignore  Cargo.toml  README.md  messages.txt  processed_message_ids.txt
.github/workflows/: rust.yml
benches/: benchmark.rs  performance_benchmarks.rs
examples/: 01_basic_messaging.rs  02_schema_registry.rs  03_distributed_cluster.rs  04_security_auth.rs  05_monitoring_metrics.rs  06_web_console.rs  07_advanced_integration.rs  08_comprehensive_test.rs  09_tls_demo.rs  ack-mulch-transaction.rs  ack-send-recv.rs  amqp-send-recv.rs  auth-example.rs  auth-send-recv.rs  batch-transaction.rs  broker-integration-test.rs  encrypt-send-recv.rs  idempotence-send-recv.rs  idempotency-test.rs  idempotency.rs  improved-transaction.rs  persistent-ack.rs  simple-send-recv.rs  thread-send-recv.rs  transaction.rs
src/: amqp_handler.rs  config.rs  config_simple.rs  lib.rs  main.rs  web_console.rs
src/auth/: audit.rs  authentication.rs  authorization.rs  cli_auth.rs  cred_store.rs  jwt_auth.rs  mod.rs  tests.rs  token.rs  web_middleware.rs
src/broker/: cluster.rs  config.rs  consensus.rs  data_replication.rs  disaster_recovery.rs  distributed.rs  distributed_storage.rs  dynamic_scaling.rs  error.rs  log_compression.rs  message_queue.rs  metrics.rs  mod.rs  node.rs  node_management.rs  performance_optimizer.rs  pid_manager.rs  replication.rs  scaling.rs  shutdown.rs  split_brain.rs  split_brain_prevention.rs  storage.rs  topic.rs  transaction.rs
src/broker/consumer/: group.rs  mod.rs
src/broker/leader/: election.rs  heartbeat.rs  mod.rs  state.rs
src/crypto/: mod.rs
src/message/: ack.rs  message.rs  metadata.rs  mod.rs
src/monitoring/: advanced_metrics.rs  alerts.rs  centralized_logging.rs  dashboard.rs  dashboard_tests.rs  enhanced_alerts.rs  enhanced_dashboard.rs  enhanced_tracing.rs  log_aggregation.rs  metrics_collector.rs  mod.rs  mod_simple.rs  tracing.rs
src/network/: async_safe.rs  connection.rs  discovery.rs  enhanced_config.rs  enhanced_connection.rs  enhanced_protocol.rs  error.rs  flow_control.rs  mod.rs  observability.rs  production.rs  protocol.rs  protocol_v2.rs  reconnection.rs  reliability.rs  secure_protocol.rs  security.rs  tls.rs  transport.rs
src/schema/: message_schema.rs  mod.rs
src/schema/compatibility/: mod.rs
src/schema/registry/: mod.rs
src/schema/version/: mod.rs
src/security/: audit_logger.rs  authorization.rs  mod.rs  modern_tls.rs  tls_manager.rs  tls_manager_test.rs
src/subscriber/: mod.rs  types.rs
src/testing/: integration.rs  load_test.rs  mod.rs
src/tests/: broker_tests.rs  security_integration_test.rs
templates/: console.html  dashboard.html
tests/: integration_auth.rs  integration_disaster_recovery.rs  integration_messaging.rs  integration_performance.rs  integration_schema.rs  integration_security.rs  integration_tls.rs  simple_message_test.rs
