[package]
name = "pilgrimage"
version = "0.10.4"
edition = "2024"
authors = ["Kenny Miller Song"]
description = "A Kafka-like message broker in Rust"
readme = "README.md"
repository = "https://github.com/mila411/rust-kafka-like"
license = "MIT"
keywords = ["kafka", "message", "broker", "rust"]
categories = ["rust-patterns"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "pilgrimage"
path = "src/bin/pilgrimage.rs"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
actix-web = "4"
aes = "0.7"
aes-gcm = "0.10.3"
block-modes = "0.8"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4.5"
flate2 = "1.0.35"
jsonwebtoken = "8.1.1"
lazy_static = "1.4"
lapin = "1.6"
log = "0.4"
prometheus= "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8.5"
simplelog = "0.9"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.5"
actix-test = "0.1.5"
assert_cmd = "2"
criterion = "0.3"
predicates = "3"
tokio = { version = "1", features = ["full"] }
tempfile = "3.2"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
