[package]
name = "pilgrimage"
version = "0.16.0"
edition = "2024"
authors = ["Kenny Miller Song"]
description = "A Kafka-like message broker in Rust"
readme = "README.md"
repository = "https://github.com/mila411/rust-kafka-like"
license = "MIT"
keywords = ["kafka", "message", "broker", "rust"]
categories = ["rust-patterns"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false

[[bin]]
name = "pilgrimage"
path = "src/bin/pilgrimage.rs"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
clap = "3.2.0"
ctrlc = "3.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.9"
aes-gcm = "0.10.3"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
tempfile = "3.2"
flate2 = "1.0.35"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
socket2 = "0.5"
async-trait = "0.1"
tokio-rustls = "0.25"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-native-certs = "0.7"
webpki-roots = "0.26"
prometheus = "0.13"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-amqp = "2.0.0"
futures-util = "0.3"
lapin = "2.5.0"
parking_lot = "0.12.4"
glob = "0.3.2"
tracing = "0.1.41"
thiserror = "2.0.12"
reqwest = { version = "0.12.19", features = ["json"] }
md5 = "0.7.0"
rcgen = { version = "0.11", optional = true }
sha2 = "0.10"
ring = "0.16"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"
opentelemetry-otlp = "0.13"
opentelemetry-prometheus = "0.13"
opentelemetry-semantic-conventions = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
regex = "1.5"
bytes = "1.0"
hostname = "0.3"
crc32fast = "1.3"
hex = "0.4"
num_cpus = "1.0"
serde_bytes = "0.11"
libc = "0.2"
toml = "0.8"
serde_yaml = "0.9"
x509-parser = "0.15"

[features]
default = []
test-certs = ["rcgen"]

[dev-dependencies]
env_logger = "0.10"
criterion = "0.3"
tempfile = "3.2"
assert_cmd = "2"
predicates = "3"
actix-rt = "2.5"
actix-test = "0.1.5"

[[bench]]
name = "performance_benchmarks"
harness = false

[profile.bench]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
